d-aks-privatelinkservice/appDirect.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myappdirect
spec:
  selector:
    matchLabels:
      app: myappdirect
  template:
    metadata:
      labels:
        app: myappdirect
    spec:
      containers:
      - name: myappdirect
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: content
          mountPath: "/usr/share/nginx/html/"
          readOnly: true
      volumes:
      - name: content
        configMap:
          name: content
---
apiVersion: v1
kind: Service
metadata:
  name: myappdirect
  annotations:
      service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: /
      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
      service.beta.kubernetes.io/azure-load-balancer-internal-subnet: lb
      service.beta.kubernetes.io/azure-pls-create: "true"
      service.beta.kubernetes.io/azure-pls-name: myservicedirect
      service.beta.kubernetes.io/azure-pls-ip-configuration-subnet: privatelinks
      service.beta.kubernetes.io/azure-pls-ip-configuration-ip-address-count: "1"
      service.beta.kubernetes.io/azure-pls-ip-configuration-ip-address: 10.88.5.11
      service.beta.kubernetes.io/azure-pls-proxy-protocol: "false"
spec:
  type: LoadBalancer
  selector:
    app: myappdirect
  ports:
  - port: 80
    targetPort: 80
